# CaptureKit

./: .clang-format  .clang-tidy  .cursorrules  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.ps1  vcpkg.json
assets/: README.md
examples/: ffmpeg_discovery_demo.cpp
include/capturekit/encoding/: ffmpeg_discovery.hpp
src/ai/: CMakeLists.txt
src/app/: CMakeLists.txt
src/capture/: CMakeLists.txt
src/core/: CMakeLists.txt
src/editor/: CMakeLists.txt
src/encoding/: CMakeLists.txt  ffmpeg_discovery.cpp
src/plugins/: CMakeLists.txt
src/render/: CMakeLists.txt
tests/: CMakeLists.txt  ffmpeg_discovery_tests.cpp  main.cpp
